unpackaged/main/default/objects/bt_stripe__Checkout_Submission__c/bt_stripe__Checkout_Submission__c.object-meta.xml
<CustomObject>
    <description>A Checkout Submission record is used by the Checkout API to store cart data. Once a checkout is complete and submitted, the cart data is processed to create an Invoice and Line Items.</description>
    <label>Checkout Submission</label>
    <nameField>
        <displayFormat>SUBM-{0000}</displayFormat>
        <label>Checkout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>