unpackaged/main/default/objects/bt_stripe__Checkout_Submission__c/fields/bt_stripe__Key__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Indexed key field that is used by the Checkout API  - is generated when a record is inserted has validations that prevent it from being changed</description>
    <externalId>true</externalId>
    <inlineHelpText>Indexed key field that is used by the Checkout API  - is generated when a record is inserted has validations that prevent it from being changed</inlineHelpText>
    <label>Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>