unpackaged/main/default/objects/bt_stripe__Checkout_Submission__c/fields/bt_stripe__Sales_Document__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Sales_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Invoice created for the Checkout Submission - will be populated when Status = Complete</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>bt_stripe__Sales_Document__c</referenceTo>
    <relationshipLabel>Checkout Submissions</relationshipLabel>
    <relationshipName>Checkout_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>