unpackaged/main/default/objects/bt_stripe__Checkout_Submission__c/fields/bt_stripe__Source__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Source__c</fullName>
    <inlineHelpText>The source of this checkout.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Storefront</fullName>
                <default>true</default>
                <label>Storefront</label>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>