unpackaged/main/default/objects/bt_stripe__Checkout_Submission__c/listViews/bt_stripe__All.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Key__c</columns>
    <columns>bt_stripe__Status__c</columns>
    <columns>bt_stripe__Sales_Document__c</columns>
    <columns>bt_stripe__Error__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>